--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -14,7 +14,7 @@
          <h1>CONTACT</h1>
          <nav>
             <ul>
-               <li><a href="home.html">HOME</a></li>
+               <li><a href="index.html">HOME</a></li>
                <li><a href="grandtour.html">GRAND TOUR</a></li>
                <li><a href="espionage.html">ESPIONAGE 2114</a></li>
                <li><a href="misc.html">GALLERY</a></li>
