--- a/portfolio/espionage.html
+++ b/portfolio/espionage.html
@@ -16,7 +16,7 @@
          <h1>ESPIONAGE 2114</h1>
          <nav>
             <ul>
-               <li><a href="home.html">HOME</a></li>
+               <li><a href="index.html">HOME</a></li>
                <li><a href="grandtour.html">GRAND TOUR</a></li>
                <li><a href="espionage.html">ESPIONAGE 2114</a></li>
                <li><a href="misc.html">GALLERY</a></li>
