--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -15,7 +15,7 @@
          <h1>PROJECT MIDNIGHT</h1>
          <nav>
             <ul>
-               <li><a href="home.html">HOME</a></li>
+               <li><a href="index.html">HOME</a></li>
                <li><a href="grandtour.html">GRAND TOUR</a></li>
                <li><a href="espionage.html">ESPIONAGE 2114</a></li>
                <li><a href="misc.html">GALLERY</a></li>
