--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
             <div class="about-text">
                <h2>ABOUT PROJECT MIDNIGHT</h2>
                <p>
-                  Project Midnight isn’t a brand — it’s a mirror. A reflection of creation in the quiet hours when the world is asleep, and truth feels sharper. It’s the place between signal and silence… where story, sound, and design collapse into one
+                  Project Midnight isn’t a brand, it’s a mirror. A reflection of creation in the quiet hours when the world is asleep, and truth feels sharper. It’s the place between signal and silence… where story, sound, and design collapse into one
                   vision.
                </p>
 
