updated site layout and css sheet

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
          <h2>WELCOME TO PROJECT MIDNIGHT</h2>
          <p><em>A collection of art, machines, and stories — this is PROJECT MIDNIGHT.</em></p>
 
-         <a href="about.HTML"><img src="images/media.jpg" alt="Isaiah Brown" /></a>
+         <a href="about.html"><img src="images/media.jpg" alt="Isaiah Brown" /></a>
          <figcaption>"It is like a finger pointing a way to the moon. Don't concentrate on the finger or you will miss all that heavenly glory" - Bruce Lee</figcaption>
          <!-- <h2>MIDNIGHT ARCHIVE</h2>
          <ul>
