--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,6 @@
                <li><a href="grandtour.html">GRAND TOUR</a></li>
                <li><a href="espionage.html">ESPIONAGE 2114</a></li>
                <li><a href="misc.html">GALLERY</a></li>
-               <li><a href="contact.html" class="active">CONTACT</a></li>
             </ul>
          </nav>
       </header>
@@ -28,7 +27,7 @@
             <h2>Reach Out</h2>
             <p>Got a question, collaboration idea, or just want to connect? Drop a message below.</p>
 
-            <form class="contact-form" action="#" method="post">
+            <form class="contact-form" action="https://formspree.io/f/mdkwwzqv" method="POST">
                <div class="form-group">
                   <label for="name">Name</label>
                   <input type="text" id="name" name="name" placeholder="Enter your name" required />
@@ -36,7 +35,7 @@
 
                <div class="form-group">
                   <label for="email">Email</label>
-                  <input type="email" id="email" name="email" placeholder="Enter your email" required />
+                  <input type="email" id="email" name="_replyto" placeholder="Enter your email" required />
                </div>
 
                <div class="form-group">
@@ -44,8 +43,31 @@
                   <textarea id="message" name="message" placeholder="Write your message..." rows="5" required></textarea>
                </div>
 
+               <!-- Optional success/fail redirect -->
+               <input type="hidden" name="_subject" value="New Message from Project Midnight" />
+               <input type="hidden" name="_next" value="thankyou.html" />
+
                <button type="submit" class="send-btn">Send Message</button>
             </form>
+            <script>
+               document.querySelector(".contact-form").addEventListener("submit", async function (e) {
+                  e.preventDefault();
+                  const form = e.target;
+                  const data = new FormData(form);
+                  const response = await fetch(form.action, {
+                     method: form.method,
+                     body: data,
+                     headers: { Accept: "application/json" },
+                  });
+
+                  if (response.ok) {
+                     alert(" Message sent successfully!");
+                     form.reset();
+                  } else {
+                     alert(" Something went wrong. Please try again.");
+                  }
+               });
+            </script>
          </section>
       </main>
       <!-- FOOTER HTML -->
