--- a/espionage.html
+++ b/espionage.html
@@ -7,6 +7,7 @@
       <link rel="stylesheet" href="base.css" />
       <link rel="stylesheet" href="animation.css" />
       <script src="clock.js"></script>
+      <!-- espionage.js is still fine for your lightbox/gallery -->
       <script src="espionage.js"></script>
    </head>
    <body>
@@ -32,10 +33,12 @@
                truth or erase it completely.
             </p>
 
-            <!-- PDF Section -->
-            <section class="pdf-container">
-               <!-- Replace espionage2114.pdf with your actual file name -->
-               <iframe src="espionage/espionage2114.pdf" title="Espionage 2114 PDF"></iframe>
+            <!-- PDF Cover Section -->
+            <section class="pdf-cover">
+               <a href="espionage/espionage2114.pdf#view=FitH" target="_blank" rel="noopener noreferrer" aria-label="Open Espionage 2114 PDF in a new tab">
+                  <img src="espionage/espionage2114.png" alt="Espionage 2114 PDF Cover" class="pdf-image" />
+               </a>
+               <p class="pdf-caption">BOOK 1: <strong>ESPIONAGE 2114</strong></p>
             </section>
 
             <!-- Gallery Section -->
