UPDATED AND ADDED MUSIC SECTION ON GALLERY

--- a/misc.html
+++ b/misc.html
@@ -53,8 +53,43 @@
                <img id="zoom-img" src="" alt="Zoomed image" />
             </div>
          </article>
+         <!-- 🎵 Music Playlist Section -->
+         <section class="music-section">
+            <h2>A Curated Sound for the Night</h2>
+
+            <!-- Playlist Cover -->
+            <div class="playlist-cover">
+               <img src="images/midnightsounds.jpeg" alt="Project Midnight Playlist Cover" />
+            </div>
+
+            <!-- Audio Player -->
+            <audio id="audio-player" controls>
+               <source src="audio/futurexforgivemenots.mp3" type="audio/mp3" />
+               Your browser does not support the audio element.
+            </audio>
+
+            <!-- Playlist List -->
+            <ul id="playlist">
+               <li data-src="audio/futurexforgivemenots.mp3" class="active">FUTURE X FORGIVE ME NOTS</li>
+               <li data-src="audio/rockysuperpeople.mp3">ASAP ROCKY X SUPER PEOPLE</li>
+            </ul>
+         </section>
+         <script src="slideshow.js"></script>
+         <script>
+            const player = document.getElementById("audio-player");
+            const tracks = document.querySelectorAll("#playlist li");
+
+            tracks.forEach((track) => {
+               track.addEventListener("click", () => {
+                  tracks.forEach((t) => t.classList.remove("active"));
+                  track.classList.add("active");
+                  player.src = track.getAttribute("data-src");
+                  player.play();
+               });
+            });
+         </script>
       </main>
-      <script src="slideshow.js"></script>
+
       <!-- FOOTER -->
       <footer class="site-footer" role="contentinfo" aria-label="Site footer">
          <div class="container footer-inner">
