updated html and uploaded new images for slideshow

--- a/misc.html
+++ b/misc.html
@@ -29,6 +29,18 @@
             <!-- 🎞️ Slideshow Section -->
             <section class="slideshow-container">
                <div class="slide fade">
+                  <img src="images/zay.jpeg" alt="Zay" onclick="zoomImage(this)" />
+               </div>
+               <div class="slide fade">
+                  <img src="images/kira.jpeg" alt="Kira" onclick="zoomImage(this)" />
+               </div>
+               <div class="slide fade">
+                  <img src="images/mute.jpeg" alt="Mute" onclick="zoomImage(this)" />
+               </div>
+               <div class="slide fade">
+                  <img src="images/twindragons.jpeg" alt="Twin Dragons" onclick="zoomImage(this)" />
+               </div>
+               <div class="slide fade">
                   <img src="cross.jpeg" alt="Cross" onclick="zoomImage(this)" />
                </div>
                <div class="slide fade">
