full site revamp with new css and background

--- a/espionage.html
+++ b/espionage.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>PROJECT MIDNIGHT | ESPIONAGE 2114</title>
+      <title>PM-Ⅱ</title>
       <link rel="stylesheet" href="base.css" />
       <link rel="stylesheet" href="animation.css" />
       <script src="clock.js"></script>
@@ -14,57 +14,53 @@
       <!-- HEADER -->
       <header>
          <div id="clock"></div>
-         <h1>ESPIONAGE 2114</h1>
+         <h1>Ⅱ</h1>
          <nav>
             <ul>
-               <li><a href="index.html">HOME</a></li>
-               <li><a href="grandtour.html">GRAND TOUR</a></li>
-               <li><a href="espionage.html">ESPIONAGE 2114</a></li>
-               <li><a href="misc.html">GALLERY</a></li>
+               <li><a href="index.html">⬛︎</a></li>
+               <li><a href="grandtour.html">Ⅰ</a></li>
+               <li><a href="espionage.html">Ⅱ</a></li>
+               <li><a href="misc.html">Ⅲ</a></li>
             </ul>
          </nav>
       </header>
 
       <main class="container">
          <article>
-            <h2>OR1GYN</h2>
-            <p>
-               Set in the neon-soaked streets of the futuristic year 2114, <strong>Espionage 2114</strong> follows an intelligence agent trapped between loyalty and rebellion. In a world ruled by surveillance and secrets, every choice could rewrite the
-               truth or erase it completely.
-            </p>
+            <p>EVERY DECISION IS RECORDED.</p>
 
             <!-- PDF Cover Section -->
             <section class="pdf-cover">
                <a href="espionage/espionage2114.pdf#view=FitH" target="_blank" rel="noopener noreferrer" aria-label="Open Espionage 2114 PDF in a new tab">
-                  <img src="espionage/espionage2114.png" alt="Espionage 2114 PDF Cover" class="pdf-image" />
+                  <img src="espionage/espionage2114.png" alt="ARCHIVE DOCUMENT" class="pdf-image" />
                </a>
-               <p class="pdf-caption">BOOK 1: <strong>ESPIONAGE 2114</strong></p>
+               <p class="pdf-caption">PRIMARY DOCUMENT</strong></p>
             </section>
 
             <!-- Gallery Section -->
             <section class="gallery">
                <div class="gallery-item">
-                  <img src="espionage/aika.jpeg" alt="AIKA THE CODERIPPER" onclick="openLightbox(this)" />
+                  <img src="espionage/aika.jpeg" alt="ARCHIVE IMAGE" onclick="openLightbox(this)" />
                   <div class="caption">AIKA THE CODERIPPER</div>
                </div>
                <div class="gallery-item">
-                  <img src="espionage/noctis.jpeg" alt="NOCTIS/WRAITH" onclick="openLightbox(this)" />
+                  <img src="espionage/noctis.jpeg" alt="ARCHIVE IMAGE" onclick="openLightbox(this)" />
                   <div class="caption">NOCTIS A.K.A. WRAITH</div>
                </div>
                <div class="gallery-item">
-                  <img src="espionage/sylas.jpeg" alt="SYLAS THE BYTESMITH" onclick="openLightbox(this)" />
+                  <img src="espionage/sylas.jpeg" alt="ARCHIVE IMAGE" onclick="openLightbox(this)" />
                   <div class="caption">SYLAS THE BYTESMITH</div>
                </div>
                <div class="gallery-item">
-                  <img src="espionage/voss.jpeg" alt="CHIEF ARDEN VOSS" onclick="openLightbox(this)" />
+                  <img src="espionage/voss.jpeg" alt="ARCHIVE IMAGE" onclick="openLightbox(this)" />
                   <div class="caption">CHIEF ARDEN VOSS</div>
                </div>
                <div class="gallery-item">
-                  <img src="espionage/sara.jpeg" alt="SARA" onclick="openLightbox(this)" />
+                  <img src="espionage/sara.jpeg" alt="ARCHIVE IMAGE" onclick="openLightbox(this)" />
                   <div class="caption">SARA</div>
                </div>
                <div class="gallery-item">
-                  <img src="espionage/preston.jpeg" alt="PRESTON GRANT" onclick="openLightbox(this)" />
+                  <img src="espionage/preston.jpeg" alt="ARCHIVE IMAGE" onclick="openLightbox(this)" />
                   <div class="caption">PRESTON GRANT</div>
                </div>
             </section>
@@ -76,12 +72,11 @@
          </article>
       </main>
 
-      <!-- FOOTER -->
+      <!-- FOOTER HTML -->
       <footer class="site-footer" role="contentinfo" aria-label="Site footer">
          <div class="container footer-inner">
             <nav aria-label="Footer navigation">
                <ul class="footer-list">
-                  <li><a href="about.html">About</a></li>
                   <li><a href="contact.html">Contact</a></li>
                </ul>
             </nav>
