--- a/grandtour.html
+++ b/grandtour.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>PROJECT MIDNIGHT | GRAND TOUR</title>
+      <title>PM-Ⅰ</title>
       <link rel="stylesheet" href="base.css" />
       <link rel="stylesheet" href="animation.css" />
       <script src="clock.js"></script>
@@ -11,92 +11,83 @@
    <body>
       <header>
          <div id="clock"></div>
-         <h1>GRAND TOUR</h1>
+         <h1>Ⅰ</h1>
          <nav>
             <ul>
-               <li><a href="index.html">HOME</a></li>
-               <li><a href="grandtour.html">GRAND TOUR</a></li>
-               <li><a href="espionage.html">ESPIONAGE 2114</a></li>
-               <li><a href="misc.html">GALLERY</a></li>
+               <li><a href="index.html">⬛︎</a></li>
+               <li><a href="grandtour.html">Ⅰ</a></li>
+               <li><a href="espionage.html">Ⅱ</a></li>
+               <li><a href="misc.html">Ⅲ</a></li>
             </ul>
          </nav>
       </header>
       <main class="container">
          <article>
-            <h2>WELCOME TO THE LEAGUE!</h2>
-            <p>Grand Tour explores the lives of three college students who navigate their lives through street racing.</p>
+            <p>THE RACE CONTINUES.</p>
 
             <section id="grandtour">
                <div class="chapters-grid">
                   <!-- Chapter 1 -->
-                  <a class="chapter-link" href="grandtour/gt1.pdf#view=FitH" target="_blank" rel="noopener noreferrer" aria-label="Open Chapter 1 in a new tab (PDF)">
+                  <a class="chapter-link" href="grandtour/gt1.pdf#view=FitH" target="_blank" rel="noopener noreferrer">
                      <div class="chapter">
-                        <img src="grandtour/grandtour1.jpeg" alt="Chapter 1 Cover" />
-                        <h3>Chapter 1</h3>
-                        <p>It's always great day when the rent is due...</p>
+                        <img src="grandtour/grandtour1.jpeg" alt="ARCHIVE FILE" />
+                        <h3>ENTRY 01</h3>
                      </div>
                   </a>
 
                   <!-- Chapter 2 -->
-                  <a class="chapter-link" href="grandtour/gt2.pdf#view=FitH" target="_blank" rel="noopener noreferrer" aria-label="Open Chapter 2 in a new tab (PDF)">
+                  <a class="chapter-link" href="grandtour/gt2.pdf#view=FitH" target="_blank" rel="noopener noreferrer">
                      <div class="chapter">
-                        <img src="grandtour/grandtour2.jpeg" alt="Chapter 2 Cover" />
-                        <h3>Chapter 2</h3>
-                        <p>At least rent got paid...it did right?</p>
+                        <img src="grandtour/grandtour2.jpeg" alt="ARCHIVE FILE" />
+                        <h3>ENTRY 02</h3>
                      </div>
                   </a>
 
                   <!-- Chapter 3 -->
-                  <a class="chapter-link" href="grandtour/gt3.pdf#view=FitH" target="_blank" rel="noopener noreferrer" aria-label="Open Chapter 3 in a new tab (PDF)">
+                  <a class="chapter-link" href="grandtour/gt3.pdf#view=FitH" target="_blank" rel="noopener noreferrer">
                      <div class="chapter">
-                        <img src="grandtour/grandtour3.jpeg" alt="Chapter 3 Cover" />
-                        <h3>Chapter 3</h3>
-                        <p>There's a lot on the line for tonight... Kira better be ready!</p>
+                        <img src="grandtour/grandtour3.jpeg" alt="ARCHIVE FILE" />
+                        <h3>ENTRY 03</h3>
                      </div>
                   </a>
 
                   <!-- Chapter 4 -->
-                  <a class="chapter-link" href="grandtour/gt4.pdf#view=FitH" target="_blank" rel="noopener noreferrer" aria-label="Open Chapter 4 in a new tab (PDF)">
+                  <a class="chapter-link" href="grandtour/gt4.pdf#view=FitH" target="_blank" rel="noopener noreferrer">
                      <div class="chapter">
-                        <img src="grandtour/grandtour4.jpeg" alt="Chapter 4 Cover" />
-                        <h3>Chapter 4</h3>
-                        <p>Adapt or lose it all.</p>
+                        <img src="grandtour/grandtour4.jpeg" alt="ARCHIVE FILE" />
+                        <h3>ENTRY 04</h3>
                      </div>
                   </a>
 
                   <!-- Chapter 5 -->
-                  <a class="chapter-link" href="grandtour/gt5.pdf#view=FitH" target="_blank" rel="noopener noreferrer" aria-label="Open Chapter 5 in a new tab (PDF)">
+                  <a class="chapter-link" href="grandtour/gt5.pdf#view=FitH" target="_blank" rel="noopener noreferrer">
                      <div class="chapter">
-                        <img src="grandtour/grandtour5.jpeg" alt="Chapter 5 Cover" />
-                        <h3>Chapter 5</h3>
-                        <p>Okay so maybe he was just a little insane.</p>
+                        <img src="grandtour/grandtour5.jpeg" alt="ARCHIVE FILE" />
+                        <h3>ENTRY 05</h3>
                      </div>
                   </a>
 
                   <!-- Chapter 6 -->
-                  <a class="chapter-link" href="grandtour/gt6.pdf#view=FitH" target="_blank" rel="noopener noreferrer" aria-label="Open Chapter 6 in a new tab (PDF)">
+                  <a class="chapter-link" href="grandtour/gt6.pdf#view=FitH" target="_blank" rel="noopener noreferrer">
                      <div class="chapter">
-                        <img src="grandtour/grandtour6.jpeg" alt="Chapter 6 Cover" />
-                        <h3>Chapter 6</h3>
-                        <p>It's just something new for us everyday. I'm exhausted.</p>
+                        <img src="grandtour/grandtour6.jpeg" alt="ARCHIVE FILE" />
+                        <h3>ENTRY 06</h3>
                      </div>
                   </a>
 
                   <!-- Chapter 7 -->
-                  <a class="chapter-link" href="grandtour/gt7.pdf#view=FitH" target="_blank" rel="noopener noreferrer" aria-label="Open Chapter 7 in a new tab (PDF)">
+                  <a class="chapter-link" href="grandtour/gt7.pdf#view=FitH" target="_blank" rel="noopener noreferrer">
                      <div class="chapter">
-                        <img src="grandtour/grandtour7.jpeg" alt="Chapter 7 Cover" />
-                        <h3>Chapter 7</h3>
-                        <p>If you're feeling froggy. leap.</p>
+                        <img src="grandtour/grandtour7.jpeg" alt="ARCHIVE FILE" />
+                        <h3>ENTRY 07</h3>
                      </div>
                   </a>
 
                   <!-- Chapter 8 -->
-                  <a class="chapter-link" href="grandtour/gt8.pdf#view=FitH" target="_blank" rel="noopener noreferrer" aria-label="Open Chapter 8 in a new tab (PDF)">
+                  <a class="chapter-link" href="grandtour/gt8.pdf#view=FitH" target="_blank" rel="noopener noreferrer">
                      <div class="chapter">
-                        <img src="grandtour/grandtour8.jpeg" alt="Chapter 8 Cover" />
-                        <h3>Chapter 8</h3>
-                        <p>Rain tends to fuel people's anger.</p>
+                        <img src="grandtour/grandtour8.jpeg" alt="ARCHIVE FILE" />
+                        <h3>ENTRY 08</h3>
                      </div>
                   </a>
 
@@ -110,7 +101,6 @@
          <div class="container footer-inner">
             <nav aria-label="Footer navigation">
                <ul class="footer-list">
-                  <li><a href="about.html">About</a></li>
                   <li><a href="contact.html">Contact</a></li>
                </ul>
             </nav>
