--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>PROJECT MIDNIGHT | ABOUT</title>
+      <title>PROJECT MIDNIGHT | SIGNAL</title>
       <link rel="stylesheet" href="base.css" />
       <link rel="stylesheet" href="about.css" />
       <script src="clock.js"></script>
@@ -15,10 +15,10 @@
          <h1>PROJECT MIDNIGHT</h1>
          <nav>
             <ul>
-               <li><a href="index.html">HOME</a></li>
-               <li><a href="grandtour.html">GRAND TOUR</a></li>
-               <li><a href="espionage.html">ESPIONAGE 2114</a></li>
-               <li><a href="misc.html">GALLERY</a></li>
+               <li><a href="index.html">⬛︎</a></li>
+               <li><a href="grandtour.html">Ⅰ</a></li>
+               <li><a href="espionage.html">Ⅱ</a></li>
+               <li><a href="misc.html">Ⅲ</a></li>
             </ul>
          </nav>
       </header>
@@ -26,27 +26,21 @@
       <main class="about-container">
          <section class="about-section">
             <div class="about-image">
-               <img src="images/machine.jpeg" alt="Isaiah Brown - Project Midnight Creator" />
+               <img src="images/machine.jpeg" alt="Project Midnight Signal" />
             </div>
 
             <div class="about-text">
-               <h2>ABOUT PROJECT MIDNIGHT</h2>
-               <p>
-                  Project Midnight isn’t a brand, it’s a mirror. A reflection of creation in the quiet hours when the world is asleep, and truth feels sharper. It’s the place between signal and silence… where story, sound, and design collapse into one
-                  vision.
-               </p>
-
-               <p>It’s all part of decoding that signal. Project Midnight is not about what you see. It’s about what you feel when everything else fades to black.</p>
+               <h2>SIGNAL</h2>
+               <p class="cryptic-footer">BETWEEN THE NOSIE, SOMETHING WAITS.</p>
             </div>
          </section>
       </main>
 
-      <!-- FOOTER HTML -->
+      <!-- FOOTER -->
       <footer class="site-footer" role="contentinfo" aria-label="Site footer">
          <div class="container footer-inner">
             <nav aria-label="Footer navigation">
                <ul class="footer-list">
-                  <li><a href="about.html">About</a></li>
                   <li><a href="contact.html">Contact</a></li>
                </ul>
             </nav>
@@ -54,9 +48,9 @@
             <div class="footer-meta">
                <span class="brand">Project Midnight</span>
                <span class="diamond-sep" aria-hidden="true"></span>
-               <small
-                  >© <span class="owner"><a href="https://linktr.ee/zaydidntwakeup">zaydidntwakeup</a></span></small
-               >
+               <small>
+                  © <span class="owner"><a href="https://linktr.ee/zaydidntwakeup">zaydidntwakeup</a></span>
+               </small>
             </div>
          </div>
       </footer>
