--- a/contact.html
+++ b/contact.html
@@ -14,10 +14,10 @@
          <h1>CONTACT</h1>
          <nav>
             <ul>
-               <li><a href="index.html">HOME</a></li>
-               <li><a href="grandtour.html">GRAND TOUR</a></li>
-               <li><a href="espionage.html">ESPIONAGE 2114</a></li>
-               <li><a href="misc.html">GALLERY</a></li>
+               <li><a href="index.html">⬛︎</a></li>
+               <li><a href="grandtour.html">Ⅰ</a></li>
+               <li><a href="espionage.html">Ⅱ</a></li>
+               <li><a href="misc.html">Ⅲ</a></li>
             </ul>
          </nav>
       </header>
@@ -75,7 +75,6 @@
          <div class="container footer-inner">
             <nav aria-label="Footer navigation">
                <ul class="footer-list">
-                  <li><a href="about.html">About</a></li>
                   <li><a href="contact.html">Contact</a></li>
                </ul>
             </nav>
