--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>PROJECT MIDNIGHT | HOME</title>
+      <title>PROJECT MIDNIGHT</title>
       <link rel="stylesheet" href="base.css" />
       <link rel="stylesheet" href="print.css" />
       <script src="clock.js"></script>
@@ -15,20 +15,19 @@
          <h1>PROJECT MIDNIGHT</h1>
          <nav>
             <ul>
-               <li><a href="index.html">HOME</a></li>
-               <li><a href="grandtour.html">GRAND TOUR</a></li>
-               <li><a href="espionage.html">ESPIONAGE 2114</a></li>
-               <li><a href="misc.html">GALLERY</a></li>
+               <li><a href="index.html">⬛︎</a></li>
+               <li><a href="grandtour.html">Ⅰ</a></li>
+               <li><a href="espionage.html">Ⅱ</a></li>
+               <li><a href="misc.html">Ⅲ</a></li>
             </ul>
          </nav>
       </header>
 
       <main class="container">
-         <h2>WELCOME TO PROJECT MIDNIGHT</h2>
-         <p><em>A collection of art, machines, and stories — this is PROJECT MIDNIGHT.</em></p>
+         <p><em>THE PROJECT CONTINUES.</em></p>
 
-         <a href="about.html"><img src="images/media.jpg" alt="Isaiah Brown" /></a>
-         <figcaption>"It is like a finger pointing a way to the moon. Don't concentrate on the finger or you will miss all that heavenly glory" - Bruce Lee</figcaption>
+         <a href="about.html"><img src="images/media.jpg" alt="ARCHIVE IMAGE" /></a>
+         <figcaption>THIS IS NOT THE POINT.</figcaption>
          <!-- <h2>MIDNIGHT ARCHIVE</h2>
          <ul>
             <li><strong>GRAND TOUR</strong> – A COMIC BOOK ABOUT THREE FRIENDS JOURNEY WITH DESTINY!</li>
@@ -40,7 +39,6 @@
          <div class="container footer-inner">
             <nav aria-label="Footer navigation">
                <ul class="footer-list">
-                  <li><a href="about.html">About</a></li>
                   <li><a href="contact.html">Contact</a></li>
                </ul>
             </nav>
