--- a/misc.html
+++ b/misc.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>PROJECT MIDNIGHT | GALLERY</title>
+      <title>PM-Ⅲ</title>
       <link rel="stylesheet" href="base.css" />
       <link rel="stylesheet" href="gallery.css" />
       <script src="clock.js"></script>
@@ -11,52 +11,50 @@
    <body>
       <header>
          <div id="clock"></div>
-         <h1>MIDNIGHT GALLERY</h1>
+         <h1>Ⅲ</h1>
          <nav>
             <ul>
-               <li><a href="index.html">HOME</a></li>
-               <li><a href="grandtour.html">GRAND TOUR</a></li>
-               <li><a href="espionage.html">ESPIONAGE 2114</a></li>
-               <li><a href="misc.html">GALLERY</a></li>
+               <li><a href="index.html">⬛︎</a></li>
+               <li><a href="grandtour.html">Ⅰ</a></li>
+               <li><a href="espionage.html">Ⅱ</a></li>
+               <li><a href="misc.html">Ⅲ</a></li>
             </ul>
          </nav>
       </header>
 
       <main class="container">
          <article>
-            <h2>PROJECT MIDNIGHT GALLERY</h2>
-
             <!-- 🎞️ Slideshow Section -->
             <section class="slideshow-container">
                <div class="slide fade">
-                  <img src="images/zay.jpeg" alt="Zay" onclick="zoomImage(this)" />
+                  <img src="images/zay.jpeg" alt="ARCHIVE IMAGE" onclick="zoomImage(this)" />
                </div>
                <div class="slide fade">
-                  <img src="images/kira.jpeg" alt="Kira" onclick="zoomImage(this)" />
+                  <img src="images/kira.jpeg" alt="ARCHIVE IMAGE" onclick="zoomImage(this)" />
                </div>
                <div class="slide fade">
-                  <img src="images/mute.jpeg" alt="Mute" onclick="zoomImage(this)" />
+                  <img src="images/mute.jpeg" alt="ARCHIVE IMAGE" onclick="zoomImage(this)" />
                </div>
                <div class="slide fade">
-                  <img src="images/twindragons.jpeg" alt="Twin Dragons" onclick="zoomImage(this)" />
+                  <img src="images/twindragons.jpeg" alt="ARCHIVE IMAGE" onclick="zoomImage(this)" />
                </div>
                <div class="slide fade">
-                  <img src="cross.jpeg" alt="Cross" onclick="zoomImage(this)" />
+                  <img src="cross.jpeg" alt="ARCHIVE IMAGE" onclick="zoomImage(this)" />
                </div>
                <div class="slide fade">
-                  <img src="reflection.jpeg" alt="Water reflection" onclick="zoomImage(this)" />
+                  <img src="reflection.jpeg" alt="ARCHIVE IMAGE" onclick="zoomImage(this)" />
                </div>
                <div class="slide fade">
-                  <img src="2rth.jpeg" alt="2RTH" onclick="zoomImage(this)" />
+                  <img src="2rth.jpeg" alt="ARCHIVE IMAGE" onclick="zoomImage(this)" />
                </div>
                <div class="slide fade">
-                  <img src="images/fish.jpeg" alt="Fish reflection" onclick="zoomImage(this)" />
+                  <img src="images/fish.jpeg" alt="ARCHIVE IMAGE" onclick="zoomImage(this)" />
                </div>
                <div class="slide fade">
-                  <img src="images/mech.jpeg" alt="Purple mech" onclick="zoomImage(this)" />
+                  <img src="images/mech.jpeg" alt="ARCHIVE IMAGE" onclick="zoomImage(this)" />
                </div>
                <div class="slide fade">
-                  <img src="images/pitlotgundam.jpeg" alt="Gundam Pilot" onclick="zoomImage(this)" />
+                  <img src="images/pitlotgundam.jpeg" alt="ARCHIVE IMAGE" onclick="zoomImage(this)" />
                </div>
             </section>
 
@@ -67,8 +65,6 @@
          </article>
          <!-- 🎵 Music Playlist Section -->
          <section class="music-section">
-            <h2>A Curated Sound for the Night</h2>
-
             <!-- Playlist Cover -->
             <div class="playlist-cover">
                <img src="images/midnightsounds.jpeg" alt="Project Midnight Playlist Cover" />
@@ -82,20 +78,19 @@
 
             <!-- Playlist List -->
             <ul id="playlist">
-               <li data-src="audio/FUTUREXFORGIVEMENOTS.mp3" class="active">FUTURE X FORGIVE ME NOTS</li>
-               <li data-src="audio/ROCKYSUPERPEOPLE.mp3">ASAP ROCKY X SUPER PEOPLE</li>
+               <li data-src="audio/FUTUREXFORGIVEMENOTS.mp3" class="active">TRACK 01</li>
+               <li data-src="audio/ROCKYSUPERPEOPLE.mp3">TRACK 02</li>
             </ul>
          </section>
          <script src="slideshow.js"></script>
          <script src="playlist.js"></script>
       </main>
 
-      <!-- FOOTER -->
+      <!-- FOOTER HTML -->
       <footer class="site-footer" role="contentinfo" aria-label="Site footer">
          <div class="container footer-inner">
             <nav aria-label="Footer navigation">
                <ul class="footer-list">
-                  <li><a href="about.html">About</a></li>
                   <li><a href="contact.html">Contact</a></li>
                </ul>
             </nav>
