--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <main class="container">
          <p><em>THE PROJECT CONTINUES.</em></p>
 
-         <a href="about.html"><img src="images/media.jpg" alt="ARCHIVE IMAGE" /></a>
+         <a href="about.html" class="video-link"> <video src="videos/brick.mp4" autoplay muted loop playsinline preload="auto"></video></a>
          <figcaption>THIS IS NOT THE POINT.</figcaption>
          <!-- <h2>MIDNIGHT ARCHIVE</h2>
          <ul>
