--- a/misc.html
+++ b/misc.html
@@ -39,22 +39,28 @@
                   <img src="images/twindragons.jpeg" alt="ARCHIVE IMAGE" onclick="zoomImage(this)" />
                </div>
                <div class="slide fade">
-                  <img src="cross.jpeg" alt="ARCHIVE IMAGE" onclick="zoomImage(this)" />
+                  <img src="images/cross1.jpeg" alt="ARCHIVE IMAGE" onclick="zoomImage(this)" />
                </div>
                <div class="slide fade">
-                  <img src="reflection.jpeg" alt="ARCHIVE IMAGE" onclick="zoomImage(this)" />
+                  <img src="images/reflection1.jpeg" alt="ARCHIVE IMAGE" onclick="zoomImage(this)" />
                </div>
                <div class="slide fade">
                   <img src="2rth.jpeg" alt="ARCHIVE IMAGE" onclick="zoomImage(this)" />
                </div>
                <div class="slide fade">
-                  <img src="images/fish.jpeg" alt="ARCHIVE IMAGE" onclick="zoomImage(this)" />
+                  <img src="images/fish11.jpeg" alt="ARCHIVE IMAGE" onclick="zoomImage(this)" />
                </div>
                <div class="slide fade">
                   <img src="images/mech.jpeg" alt="ARCHIVE IMAGE" onclick="zoomImage(this)" />
                </div>
                <div class="slide fade">
-                  <img src="images/pitlotgundam.jpeg" alt="ARCHIVE IMAGE" onclick="zoomImage(this)" />
+                  <img src="images/pilotgundam1.jpeg" alt="ARCHIVE IMAGE" onclick="zoomImage(this)" />
+               </div>
+               <div class="slide fade">
+                  <img src="images/pilot2.jpeg" alt="ARCHIVE IMAGE" onclick="zoomImage(this)" />
+               </div>
+               <div class="slide fade">
+                  <img src="images/glow.jpeg" alt="ARCHIVE IMAGE" onclick="zoomImage(this)" />
                </div>
             </section>
 
