updated about css page

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
       <link rel="stylesheet" href="base.css" />
       <link rel="stylesheet" href="about.css" />
       <script src="clock.js"></script>
+      <script src="signal.js" defer></script>
    </head>
 
    <body>
@@ -26,7 +27,8 @@
       <main class="about-container">
          <section class="about-section">
             <div class="about-image">
-               <img src="images/machine.jpeg" alt="Project Midnight Signal" />
+               <img src="images/pmzay.jpg" alt="Project Midnight Signal" class="signal-frame active" />
+               <img src="images/machine.jpeg" alt="Project Midnight Signal" class="signal-frame" />
             </div>
 
             <div class="about-text">
