--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 
             <div class="about-text">
                <h2>SIGNAL</h2>
-               <p class="cryptic-footer">BETWEEN THE NOSIE, SOMETHING WAITS.</p>
+               <p class="cryptic-footer">BETWEEN THE NOISE, SOMETHING WAITS.</p>
             </div>
          </section>
       </main>
